:bug: Aumentato z-index del menu, finiva "sotto" alle liste

--- a/source/_assets/css/main.css
+++ b/source/_assets/css/main.css
@@ -197,6 +197,10 @@
         padding-bottom: 6rem;
     }
 
+    nav.sticky {
+        z-index: 100;
+    }
+
     footer {
         position: absolute;
         bottom: 0;
